<resources>
    <string name="app_name">RickAndMortyXML</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internal">Internal Error</string>
    <string name="bad_request">Bad Request</string>
    <string name="unknown">Unknown</string>
    <string name="title_activity_main_bottom_nav">RickAndMortyXml</string>
    <string name="title_character">Character</string>
    <string name="title_episode">Episode</string>
    <string name="title_location">Location</string>
    <string name="character_name">Name:</string>
    <string name="character_species">Species:</string>
    <string name="character_status">Status:</string>
    <string name="character_gender">Gender:</string>
    <string name="character_name_content">unknown</string>
    <string name="character_species_content">unknown</string>
    <string name="character_status_content">unknown</string>
    <string name="character_gender_content">unknown</string>
    <string name="cast">Cast:</string>
    <string name="residents">Residents:</string>
</resources>